--- a/blog/config.toml
+++ b/blog/config.toml
@@ -12,9 +12,9 @@
 # For developpers, if you modify this theme, put your images in `source/images` folder and
 # use grunt task `build` to synchronize assets
 
-baseURL = "https://example.org/"
-languageCode = "en-us"
-defaultContentLanguage = "en-us"
+baseURL = "https://shoooohei.github.io/blog/"
+languageCode = "ja"
+defaultContentLanguage = "ja"
 title = "Hugo tranquilpeak theme"
 theme = "hugo-tranquilpeak-theme"
 disqusShortname = "hugo-tranquilpeak-theme"
@@ -31,7 +31,7 @@ canonifyurls = true
   archive = "archives"
 
 [author]
-  name = "Firstname Lastname"
+  name = "Kawasaki Shohei"
   bio = "Super bio with markdown support **COOL**"
   job = "Your job title"
   location = "France"
